[gd_scene load_steps=8 format=3 uid="uid://4514u05j1ne2"]

[ext_resource type="Script" uid="uid://dd6ejo22l2sko" path="res://scenes/gameplay/interactable/hackable/hacking_ui/hacking_ui.gd" id="1_jgkun"]
[ext_resource type="Shader" uid="uid://ckbwhxloes7hq" path="res://shaders/glitch.gdshader" id="3_sxm7a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sxm7a"]
shader = ExtResource("3_sxm7a")
shader_parameter/shake_power = 0.0
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 7.535
shader_parameter/shake_block_size = 30.0
shader_parameter/shake_color_rate = 0.0

[sub_resource type="Animation" id="Animation_sxm7a"]
resource_name = "hacked"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/ColorRect:material:shader_parameter/shake_power")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.005, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2/ColorRect:material:shader_parameter/shake_color_rate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0050000002375, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/PanelContainer:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(2, 0, 0, 2),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.01666667, -0.166665, 0, 0, 1, -0.13333334, 0, 0, 0, 1e-05, -0.016666662, 0.16666502, 0, 0),
"times": PackedFloat32Array(0, 0.23333333, 0.7, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/PanelContainer:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(2, 2, 2, 2),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.01666667, 0, 0, 0, 1, -0.13333334, 0, 0, 0, 1, -0.016666662, 0, 0, 0),
"times": PackedFloat32Array(0, 0.10000001, 0.90000004, 1)
}

[sub_resource type="Animation" id="Animation_o6fim"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/ColorRect:material:shader_parameter/shake_power")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2/ColorRect:material:shader_parameter/shake_color_rate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/PanelContainer:scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/PanelContainer:scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_jqwj6"]
resource_name = "bad_move"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer2/ColorRect:material:shader_parameter/shake_power")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666669, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.005, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer2/ColorRect:material:shader_parameter/shake_color_rate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666669, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0050000002375, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ws0j7"]
_data = {
&"RESET": SubResource("Animation_o6fim"),
&"bad_move": SubResource("Animation_jqwj6"),
&"hacked": SubResource("Animation_sxm7a")
}

[node name="HackingUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_jgkun")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
material = SubResource("ShaderMaterial_sxm7a")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="PanelContainer" type="PanelContainer" parent="GridContainer"]
layout_mode = 2
theme_type_variation = &"HackUI"

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HackContainer" type="GridContainer" parent="GridContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(512, 512)
layout_mode = 2
columns = 4

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="Undo" type="Button" parent="GridContainer/VBoxContainer"]
layout_mode = 2
text = "Undo"

[node name="Reset" type="Button" parent="GridContainer/VBoxContainer"]
layout_mode = 2
text = "New"

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
theme_override_constants/separation = -4

[node name="Player" type="PanelContainer" parent="GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_type_variation = &"HackTilePlayer"

[node name="PlayerTotal" type="Label" parent="GridContainer/HBoxContainer/Player"]
layout_mode = 2
theme_type_variation = &"TileLabel"
text = "0"
horizontal_alignment = 1

[node name="HackProgress" type="ProgressBar" parent="GridContainer/HBoxContainer"]
show_behind_parent = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_type_variation = &"HackProgress"
max_value = 1.0
step = 0.0
value = 0.5
show_percentage = false

[node name="Solution" type="PanelContainer" parent="GridContainer/HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme_type_variation = &"HackTileGoal"

[node name="SolutionTotal" type="Label" parent="GridContainer/HBoxContainer/Solution"]
layout_mode = 2
theme_type_variation = &"TileLabel"
text = "0"
horizontal_alignment = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -15.0
offset_right = 57.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(121.5, 47)
theme_type_variation = &"Modal"

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Hacked"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ws0j7")
}
